hphp/hack/test/typecheck/variadics/ellipsis_class_method.php.exp
ERROR: File "ellipsis_class_method.php", line 6, characters 27-27:
A variable name is expected here. (Parsing[1002])
ERROR: File "ellipsis_class_method.php", line 6, characters 24-26:
Was expecting a type hint on this variadic parameter (Typing[4033])
